--- a/src/index.scss
+++ b/src/index.scss
@@ -23,6 +23,7 @@ $bgColDark: rgba(163, 160, 160, 0.785);
 }
 
 %basic-container {
+  margin: 0 auto;
   max-width: 1500px;
 }
 
@@ -30,6 +31,10 @@ $bgColDark: rgba(163, 160, 160, 0.785);
   @extend %basic-container;
   margin-left: 10px;
   margin-right: 10px;
-  height: 100vh;
+  height: 100%;
   border-radius: 30px;
+}
+
+li {
+  list-style: none;
 }
