--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -62,13 +62,15 @@ $containerPadding: 40px;
   flex-direction: column;
   p {
     font-size: 24px;
-    line-height: 26px;
+    line-height: 30px;
   }
   ul {
     @extend %container-flex;
+    gap: 0.4em 0em;
     margin-top: 20px;
     position: sticky;
     top: 70px;  
+    max-width: 500px;
   }
   li {
     margin-left: 10px;
