--- a/src/index.scss
+++ b/src/index.scss
@@ -1,11 +1,16 @@
-$headCol: rgb(63, 66, 67);
+$headCol: rgb(23, 84, 104);
 $textCol: #fff;
 $headColDark: rgb(5, 69, 133);
 $textColDark: #000;
 $headText: rgb(255, 254, 254);
 $headTextDark: rgb(237, 237, 237);
 $bgCol: #fff;
-$bgColDark: rgba(163, 160, 160, 0.785);
+$bgColDark: rgba(59, 137, 136, 0.785);
+
+$bgContentLight: rgb(53, 130, 207);
+$colContentLight: rgb(247, 249, 252);
+$bgContentDark: rgb(15, 51, 58);
+$colContentDark: rgb(255, 255, 255);
 
 * {
   margin: 0px;
